{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 48,
  "lineage": "c85c555b-fa2c-ecee-651e-ab2c479332f5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-07-04T06:58:39.932-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/avid-phoenix-464816-f4/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/tp-network",
            "priority": 1000,
            "project": "avid-phoenix-464816-f4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/firewalls/allow-internal",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-04T06:58:39.933-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/avid-phoenix-464816-f4/global/firewalls/allow-ssh-bastion",
            "log_config": [],
            "name": "allow-ssh-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/tp-network",
            "priority": 1000,
            "project": "avid-phoenix-464816-f4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/firewalls/allow-ssh-bastion",
            "source_ranges": [
              "217.181.184.148/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/zones/europe-west1-b/disks/vm1-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-04T06:59:02.786-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/avid-phoenix-464816-f4/zones/europe-west1-b/instances/vm1-bastion",
            "instance_id": "6577092081532690633",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDFGdBRVCrlMUq+ooSPrjhTi9WOT3LzJlAVmYkqXrAI8kqvzHWdFRioBh/tcgf/u6kURTHvC+zcFv8q4GoovUf4aGR9FTGVWNaxKCqBppvxTmddixsNtAEg/t/bNpckoBjmUVH+jOuNlmIbp078XbW4No8NqQffaUR5PIKIAqC04Wp6K7Nv9EIiXlbRKDwyP0RQClKkzJNb3EcO856wYaJCI/RS0DZfD/XxvFVZct1dzScTMK1e8R13m/inQ2Iaqle6V8+E7FkOSrQEDjsFOTNY7WnooAQq0+c/6tfikV+m6jZppVSZLY4LLQS9hRm3LIO5Lc/opGwq8dDtNDnOIWYYkaVYaW2sZRnRz2xR+nfqtXoorzBpuFRIbis7VByv/pyzonsiWlczeF7b8X3FPRK0jKx0PeNoGTPhSRp+5orGHO [...]
            },
            "metadata_fingerprint": "p_g5dCULtlg=",
            "name": "vm1-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.78.101.239",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/tp-network",
                "network_ip": "10.11.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/tp-subnet-11",
                "subnetwork_project": "avid-phoenix-464816-f4"
              }
            ],
            "project": "avid-phoenix-464816-f4",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/zones/europe-west1-b/instances/vm1-bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.main",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/zones/europe-west1-b/disks/vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-04T06:59:02.932-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/avid-phoenix-464816-f4/zones/europe-west1-b/instances/vm2",
            "instance_id": "3041601378583208137",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDFGdBRVCrlMUq+ooSPrjhTi9WOT3LzJlAVmYkqXrAI8kqvzHWdFRioBh/tcgf/u6kURTHvC+zcFv8q4GoovUf4aGR9FTGVWNaxKCqBppvxTmddixsNtAEg/t/bNpckoBjmUVH+jOuNlmIbp078XbW4No8NqQffaUR5PIKIAqC04Wp6K7Nv9EIiXlbRKDwyP0RQClKkzJNb3EcO856wYaJCI/RS0DZfD/XxvFVZct1dzScTMK1e8R13m/inQ2Iaqle6V8+E7FkOSrQEDjsFOTNY7WnooAQq0+c/6tfikV+m6jZppVSZLY4LLQS9hRm3LIO5Lc/opGwq8dDtNDnOIWYYkaVYaW2sZRnRz2xR+nfqtXoorzBpuFRIbis7VByv/pyzonsiWlczeF7b8X3FPRK0jKx0PeNoGTPhSRp+5orGHO [...]
            },
            "metadata_fingerprint": "p_g5dCULtlg=",
            "name": "vm2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/tp-network",
                "network_ip": "10.11.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/tp-subnet-22",
                "subnetwork_project": "avid-phoenix-464816-f4"
              }
            ],
            "project": "avid-phoenix-464816-f4",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/zones/europe-west1-b/instances/vm2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.main",
            "google_compute_subnetwork.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/zones/europe-west1-b/disks/vm3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-04T06:59:03.481-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/avid-phoenix-464816-f4/zones/europe-west1-b/instances/vm3",
            "instance_id": "1400598446134157512",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDFGdBRVCrlMUq+ooSPrjhTi9WOT3LzJlAVmYkqXrAI8kqvzHWdFRioBh/tcgf/u6kURTHvC+zcFv8q4GoovUf4aGR9FTGVWNaxKCqBppvxTmddixsNtAEg/t/bNpckoBjmUVH+jOuNlmIbp078XbW4No8NqQffaUR5PIKIAqC04Wp6K7Nv9EIiXlbRKDwyP0RQClKkzJNb3EcO856wYaJCI/RS0DZfD/XxvFVZct1dzScTMK1e8R13m/inQ2Iaqle6V8+E7FkOSrQEDjsFOTNY7WnooAQq0+c/6tfikV+m6jZppVSZLY4LLQS9hRm3LIO5Lc/opGwq8dDtNDnOIWYYkaVYaW2sZRnRz2xR+nfqtXoorzBpuFRIbis7VByv/pyzonsiWlczeF7b8X3FPRK0jKx0PeNoGTPhSRp+5orGHO [...]
            },
            "metadata_fingerprint": "p_g5dCULtlg=",
            "name": "vm3",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/tp-network",
                "network_ip": "10.11.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/tp-subnet-33",
                "subnetwork_project": "avid-phoenix-464816-f4"
              }
            ],
            "project": "avid-phoenix-464816-f4",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/zones/europe-west1-b/instances/vm3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.main",
            "google_compute_subnetwork.subnet3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/avid-phoenix-464816-f4/global/networks/tp-network",
            "mtu": 0,
            "name": "tp-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3022414312267999316",
            "numeric_id": "3022414312267999316",
            "project": "avid-phoenix-464816-f4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/tp-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-04T06:58:40.096-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.11.1.1",
            "id": "projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/tp-subnet-11",
            "ip_cidr_range": "10.11.1.0/24",
            "name": "tp-subnet-11",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/tp-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "avid-phoenix-464816-f4",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/tp-subnet-11",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 5779077137777189119
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-04T06:58:40.094-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.11.2.1",
            "id": "projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/tp-subnet-22",
            "ip_cidr_range": "10.11.2.0/24",
            "name": "tp-subnet-22",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/tp-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "avid-phoenix-464816-f4",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/tp-subnet-22",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7281265365714886911
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-04T06:58:40.129-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.11.3.1",
            "id": "projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/tp-subnet-33",
            "ip_cidr_range": "10.11.3.0/24",
            "name": "tp-subnet-33",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/tp-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "avid-phoenix-464816-f4",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/tp-subnet-33",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 5702123272431886591
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    }
  ]
}